<resources>
    <string name="app_name">NewsTracker</string>

    <!--    Recycler View Main Activity-->
    <string name="rv_main_logo_default">This is a default image</string>
    <string name="rv_main_title_default">Default Title</string>
    <string name="rv_main_description_default">Default Description</string>
    <string name="rv_main_source_default">Default Source</string>

    <string name="bottom_nav_saved">Saved Articles</string>
    <string name="bottom_nav_breaking_news">Breaking News</string>
    <string name="bottom_nav_settings">Settings</string>

    <string name="dialog_search_label">Label</string>
    <string name="dialog_search_keyword">Keyword</string>
    <string name="dialog_search_text_view">News Search</string>
    <string name="dialog_search_language">Language</string>
    <string name="dialog_search_country">Country</string>
    <string name="dialog_search_category">Category</string>
    <string name="dialog_search_cancel">Cancel</string>
    <string name="dialog_search_save">Save</string>

    <string name="user_add_preference_error">Required Field</string>
    <string name="user_add_preference_unique">Label Already Used</string>
    <string name="user_add_preference_title">Add News Preference</string>
    <string name="user_add_preference_required">Please input a single parameter</string>



    <string name="search_content_image_description">floating_action_button</string>
    <string name="search_saved_search_preferences">Search Preferences</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="network_problem">Something went wrong</string>
    <string name="content_description">Image for info</string>
    <string name="dialog_preference_okay">Close</string>
    <string name="dialog_preference_keyword"><b>Keyword: </b>%1$s</string>
    <string name="dialog_preference_category"><b>Category: </b>%1$s</string>
    <string name="dialog_preference_country"><b>Country: </b>%1$s</string>
    <string name="dialog_preference_language"><b>Language: </b>%1$s</string>

    <string name="results_toolbar">%1$s (%2$s Results)</string>


    <string name="dialog_delete_title">Deleting a Saved Preference </string>
    <string name="dialog_delete_message">Are you sure you want to delete:\n<b>%1$s</b></string>
    <string name="dialog_delete_confirm">Delete</string>
    <string name="dialog_delete_cancel">Cancel</string>

    <string name="top_bar_menu_info">Information</string>
    <string name="top_bar_menu_info_content">Show Details</string>

    <string name="save_article_success">Article Saved</string>
    <string name="save_article_error">Article Already in Database</string>
    <string name="save_article_cancelled">Saving Cancelled</string>

    <string name="saved_articles_text_view">Saved Articles</string>

    <string name="web_view_error">URL link unavailable</string>

    <string name="delete_dialog_title">Delete Saved Article</string>
    <string name="delete_dialog_message">Would you like to delete:\n<b>%1$s</b></string>


    <string name="settings_page_count_title">Page Size</string>
    <string name="settings_page_count_summary">Maximum number of articles</string>
    <string name="settings_clear_saved_articles">Clear Saved Articles</string>
    <string name="settings_clear_saved_preferences">Clear Search Preferences</string>
    <string name="settings_clear_database">Clear Database</string>
    <string name="settings_adjustable_settings">Application Preferences</string>
    <string name="settings_dialog_delete_title">Would you like to clear %1$s?</string>
    <string name="settings_dialog_delete_content">This would clear the contents of your %1$s database</string>
    <string name="settings_dialog_clear">Clear</string>

    <string name="search">Search</string>


    <string name="redirecting">Redirecting…</string>
    <string name="undo">Undo</string>
    <string name="article_deleted">Article Deleted.</string>


    <string name="dialog_save_article_title">Saving an Article</string>
    <string name="dialog_save_article_message">Would you like to save:\n%1$s</string>
    <string name="dialog_save_article_positive">Save</string>
    <string name="dialog_save_article_negative">Cancel</string>


</resources>