<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/settings_adjustable_settings">
        <SeekBarPreference
            app:key="page_size"
            app:title="@string/settings_page_count_title"
            app:summary="@string/settings_page_count_summary"
            app:min="20"
            android:max="100"
            app:icon="@drawable/ic_filter"
            app:showSeekBarValue="true"
            android:enabled="true"
            app:adjustable="true"
            />
    </PreferenceCategory>


    <PreferenceCategory
        app:title="@string/settings_clear_database">
        <Preference
            app:title="@string/settings_clear_saved_articles"
            />
        <Preference
            app:title="@string/settings_clear_saved_preferences"/>
    </PreferenceCategory>



</PreferenceScreen>