<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/rv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/rv_main_logo_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_news" />

        <TextView
            android:id="@+id/rv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/rv_main_title_default"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/rv_logo"
            app:layout_constraintTop_toTopOf="@+id/rv_logo" />

        <TextView
            android:id="@+id/rv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/rv_main_description_default"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/rv_title"
            app:layout_constraintTop_toBottomOf="@+id/rv_title" />

        <TextView
            android:id="@+id/rv_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/rv_main_source_default"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/rv_logo"
            app:layout_constraintStart_toStartOf="@+id/rv_logo"
            app:layout_constraintTop_toBottomOf="@+id/rv_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
